--- a/css/style.css
+++ b/css/style.css
@@ -25,21 +25,65 @@ body {
   font-weight: 300;
   color: #6c6c6c; }
 
-.btn-start {
+.btn-main {
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   margin: 0;
-  padding: 19px 20px;
-  border: none;
-  background: linear-gradient(to right, #FE985B, #FE4FA7);
+  padding: 16px 20px;
   outline: none;
   border-radius: 4px;
-  color: #ffffff;
   cursor: pointer;
-  text-decoration: none; }
+  text-decoration: none;
+  display: inline-block;
+  border: none;
+  background: linear-gradient(to right, #FE985B, #FE4FA7);
+  color: #ffffff; }
+  .btn-main:hover {
+    background: linear-gradient(to right, #FE4FA7, #FE985B); }
+
+.btn-secondary {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  margin: 0;
+  padding: 16px 20px;
+  outline: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-decoration: none;
+  display: inline-block;
+  border: 1px solid #979797;
+  box-sizing: border-box;
+  border-radius: 4px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  color: #414141;
+  transition: .2s; }
+  .btn-secondary:hover {
+    color: #FE985B;
+    border-color: #FE4FA7; }
+
+.btn-free {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  margin: 0;
+  padding: 16px 20px;
+  outline: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-decoration: none;
+  display: inline-block;
+  border: none;
+  background: #ffffff;
+  color: #414141; }
+  .btn-free:hover {
+    color: #FE4FA7;
+    border-color: #FE4FA7; }
 
 .section-header {
-  color: white;
+  color: #ffffff;
   background: url("../img/Header.png") no-repeat 50% 50%;
   background-size: cover;
   position: relative; }
@@ -86,17 +130,23 @@ body {
       display: flex; }
       .section-header-wrapper__form-input {
         flex: 1;
-        width: 100%;
-        padding-right: 40px;
-        font-family: 'Montserrat', sans-serif;
-        border: none;
-        background-color: rgba(255, 255, 255, 0.25);
-        color: #ffffff;
-        font-size: 16px;
-        margin: 0;
-        padding: 16px 20px;
-        outline: none;
-        border-radius: 4px; }
+        padding-right: 40px; }
+        .section-header-wrapper__form-input input {
+          font-family: 'Montserrat', sans-serif;
+          border: none;
+          background-color: rgba(255, 255, 255, 0.25);
+          color: #ffffff;
+          font-size: 16px;
+          margin: 0;
+          padding: 16px 20px;
+          outline: none;
+          border-radius: 4px;
+          width: 100%;
+          transition: .2s; }
+          .section-header-wrapper__form-input input::placeholder {
+            color: #ffffff; }
+          .section-header-wrapper__form-input input:focus {
+            background-color: rgba(255, 255, 255, 0.5); }
 
 .section-promo {
   padding-top: 103px;
@@ -176,11 +226,12 @@ body {
     .section-plans__list-item {
       flex-basis: 370px;
       padding: 60px 45px; }
-      .section-plans__list-item_title {
+      .section-plans__list-item__title {
         font-size: 14px;
         line-height: 17px;
         font-weight: bold;
-        text-transform: uppercase; }
+        text-transform: uppercase;
+        margin-bottom: 27px; }
       .section-plans__list-item_price {
         margin-bottom: 26px; }
         .section-plans__list-item_price .prefix {
@@ -192,10 +243,84 @@ body {
           font-size: 14px;
           line-height: 17px;
           font-weight: bold; }
-      .section-plans__list-item_description {
+      .section-plans__list-item__description {
         margin-bottom: 40px;
         font-size: 16px;
         line-height: 28px;
         font-weight: 300; }
       .section-plans__list-item.active {
         background-color: #F6FAFD; }
+
+.section-free {
+  text-align: center;
+  color: #ffffff;
+  background: linear-gradient(to right, #FE985B, #FE4FA7);
+  padding-top: 120px;
+  padding-bottom: 120px; }
+  .section-free__title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 55px;
+    line-height: 60px;
+    text-align: center;
+    color: #FFFFFF;
+    margin-bottom: 26px; }
+  .section-free__description {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+    color: #FFFFFF;
+    width: 50%;
+    margin: 0 auto 40px; }
+
+.section-footer {
+  padding: 86px;
+  padding: 93px; }
+  .section-footer__logo {
+    text-align: center;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 29px;
+    color: #464646;
+    margin-bottom: 30px; }
+  .section-footer__nav {
+    display: flex;
+    justify-content: center;
+    margin: 0 0 75px;
+    padding: 0;
+    list-style: none; }
+    .section-footer__nav li + li {
+      margin-left: 60px; }
+    .section-footer__nav li a {
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 20px;
+      text-transform: uppercase;
+      color: #464646;
+      text-decoration: none;
+      transition: .2s; }
+      .section-footer__nav li a.active, .section-footer__nav li a:hover {
+        color: #FE50A6; }
+  .section-footer__copyright_and_links {
+    width: 60%;
+    margin: 0 auto;
+    font-family: 'Montserrat', sans-serif;
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+    line-height: 18px; }
+
+.helper-link {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex; }
+  .helper-link li + li {
+    margin-left: 20px; }
+  .helper-link li a {
+    color: #464646;
+    text-decoration: none; }
+    .helper-link li a:hover {
+      text-decoration: underline; }
