--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,7 @@
 
 // === Variables ===
 $color-white: #ffffff;
+$color-pink: #fe4fa7;
 // === Variables ===
 
 // === Common ===
@@ -61,11 +62,11 @@ body {
 .btn-main {
     @include start-button;
     border: none;
-    background: linear-gradient(to right, #FE985B, #FE4FA7);
+    background: linear-gradient(to right, #FE985B, $color-pink);
     color:$color-white;
 
     &:hover {
-        background: linear-gradient(to right,#FE4FA7, #FE985B,);
+        background: linear-gradient(to right,$color-pink, #FE985B,);
     }
 }
 .btn-secondary {
@@ -83,7 +84,7 @@ body {
 
     &:hover {
         color: #FE985B;
-        border-color: #FE4FA7;
+        border-color: $color-pink;
     }
 }
 .btn-free {
@@ -93,8 +94,8 @@ body {
     color: #414141;
 
     &:hover {
-        color: #FE4FA7;
-        border-color: #FE4FA7;
+        color: $color-pink;
+        border-color: $color-pink;
     }
 }
 // === /Common ===
@@ -323,7 +324,7 @@ text-align: center;
                     font-size: 72px;
                     line-height: 86px;
                     font-weight: bold;
-                    color: #FE4FA7;
+                    color: $color-pink;
                 }
                 .postfix {
 
@@ -351,7 +352,7 @@ text-align: center;
 .section-free {
     text-align: center;
     color: $color-white;
-    background: linear-gradient(to right, #FE985B, #FE4FA7);
+    background: linear-gradient(to right, #FE985B, $color-pink);
     padding-top: 120px;
     padding-bottom: 120px;
 
