--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,12 @@ body {
   font-family: 'Lato', sans-serif;
   color: #414141; }
 
+.section-outer {
+  padding-right: 20px;
+  padding-left: 20px; }
+
 .section-inner {
-  width: 1180px;
+  max-width: 1180px;
   margin: 0 auto; }
 
 .description-item__icon {
@@ -36,10 +40,10 @@ body {
   text-decoration: none;
   display: inline-block;
   border: none;
-  background: linear-gradient(to right, #FE985B, #FE4FA7);
+  background: linear-gradient(to right, #FE985B, #fe4fa7);
   color: #ffffff; }
   .btn-main:hover {
-    background: linear-gradient(to right, #FE4FA7, #FE985B); }
+    background: linear-gradient(to right, #fe4fa7, #FE985B); }
 
 .btn-secondary {
   font-family: 'Montserrat', sans-serif;
@@ -63,7 +67,7 @@ body {
   transition: .2s; }
   .btn-secondary:hover {
     color: #FE985B;
-    border-color: #FE4FA7; }
+    border-color: #fe4fa7; }
 
 .btn-free {
   font-family: 'Montserrat', sans-serif;
@@ -79,8 +83,8 @@ body {
   background: #ffffff;
   color: #414141; }
   .btn-free:hover {
-    color: #FE4FA7;
-    border-color: #FE4FA7; }
+    color: #fe4fa7;
+    border-color: #fe4fa7; }
 
 .section-header {
   color: #ffffff;
@@ -147,6 +151,17 @@ body {
             color: #ffffff; }
           .section-header-wrapper__form-input input:focus {
             background-color: rgba(255, 255, 255, 0.5); }
+    @media (max-width: 575px) {
+      .section-header-wrapper__subtitle {
+        margin-bottom: 10px; }
+      .section-header-wrapper__form {
+        flex-direction: column; }
+        .section-header-wrapper__form-input {
+          padding-right: 0; }
+        .section-header-wrapper__form input,
+        .section-header-wrapper__form button {
+          margin-top: 3px;
+          width: 100%; } }
 
 .section-promo {
   padding-top: 103px;
@@ -156,19 +171,26 @@ body {
   display: flex; }
   .section-promo-1__content, .section-promo-1__video {
     flex-basis: 50%; }
-  .section-promo-1__content {
-    padding-right: 90px; }
-    .section-promo-1__content .title {
-      font-size: 32px;
-      line-height: 51px;
-      font-weight: bold;
-      margin-bottom: 56px; }
-    .section-promo-1__content .description-item {
-      margin-top: 28px; }
+  .section-promo-1__content .title {
+    font-size: 32px;
+    line-height: 51px;
+    font-weight: bold;
+    margin-bottom: 56px; }
+  .section-promo-1__content .description-item {
+    margin-top: 28px; }
   .section-promo-1__video img {
-    width: 100%;
+    max-width: 100%;
     height: auto;
     align-items: center; }
+  @media (max-width: 767px) {
+    .section-promo-1 {
+      flex-direction: column; }
+      .section-promo-1__video {
+        order: -1;
+        margin-bottom: 20px; } }
+  @media (min-width: 768px) {
+    .section-promo-1__content {
+      padding-right: 90px; } }
 
 .section-promo-2 {
   display: flex;
@@ -182,29 +204,44 @@ body {
     margin-bottom: 20px; }
   .section-promo-2__item .title {
     margin-bottom: 14px; }
+  @media (max-width: 575px) {
+    .section-promo-2 {
+      flex-direction: column; }
+      .section-promo-2 .description-item + .description-item {
+        margin-top: 20px;
+        margin-left: 0; } }
 
 .section-founder {
   background-color: #F6FAFD;
   padding-top: 34px; }
   .section-founder .section-inner {
     display: flex; }
-  .section-founder__img {
-    align-self: flex-end; }
-  .section-founder__content {
-    padding-left: 50px;
-    align-self: center; }
-    .section-founder__content-text {
-      font-family: 'Montserrat', sans-serif;
-      font-size: 24px;
-      line-height: 40px; }
-    .section-founder__content-name {
-      padding-top: 38px;
-      font-size: 24px;
-      line-height: 29px;
-      font-weight: bold; }
-    .section-founder__content-post {
-      font-size: 20px;
-      line-height: 29px; }
+  .section-founder__content-text {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    line-height: 40px; }
+  .section-founder__content-name {
+    padding-top: 38px;
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: bold; }
+  .section-founder__content-post {
+    font-size: 20px;
+    line-height: 29px; }
+  @media (max-width: 767px) {
+    .section-founder .section-inner {
+      flex-direction: column; }
+    .section-founder__img img {
+      max-width: 100%; }
+    .section-founder__content {
+      order: -1;
+      margin-bottom: 40px; } }
+  @media (min-width: 768px) {
+    .section-founder__img {
+      align-self: flex-end; }
+    .section-founder__content {
+      align-self: center;
+      padding-left: 50px; } }
 
 .section-plans {
   padding-top: 120px;
@@ -218,7 +255,6 @@ body {
     font-size: 16px;
     line-height: 28px;
     font-weight: 300;
-    width: 50%;
     margin: 0 auto 80px; }
   .section-plans__list {
     display: flex;
@@ -238,7 +274,7 @@ body {
           font-size: 72px;
           line-height: 86px;
           font-weight: bold;
-          color: #FE4FA7; }
+          color: #fe4fa7; }
         .section-plans__list-item_price .postfix {
           font-size: 14px;
           line-height: 17px;
@@ -250,11 +286,24 @@ body {
         font-weight: 300; }
       .section-plans__list-item.active {
         background-color: #F6FAFD; }
+  @media (max-width: 575px) {
+    .section-plans {
+      flex-direction: column; }
+      .section-plans__subtitle {
+        width: 100%; }
+      .section-plans__list {
+        flex-direction: column; } }
+
+@media (max-width: 575px) {
+  __subtitle {
+    width: 50%;
+    margin-right: auto;
+    margin-left: auto; } }
 
 .section-free {
   text-align: center;
   color: #ffffff;
-  background: linear-gradient(to right, #FE985B, #FE4FA7);
+  background: linear-gradient(to right, #FE985B, #fe4fa7);
   padding-top: 120px;
   padding-bottom: 120px; }
   .section-free__title {
@@ -271,9 +320,10 @@ body {
     font-size: 20px;
     line-height: 30px;
     text-align: center;
-    color: #FFFFFF;
-    width: 50%;
     margin: 0 auto 40px; }
+  @media (min-width: 1200px) {
+    .section-free_description {
+      width: 50%; } }
 
 .section-footer {
   padding: 86px;
@@ -303,14 +353,30 @@ body {
       transition: .2s; }
       .section-footer__nav li a.active, .section-footer__nav li a:hover {
         color: #FE50A6; }
+    @media (max-width: 575px) {
+      .section-footer__nav {
+        flex-direction: column;
+        text-align: center; }
+        .section-footer__nav li + li {
+          margin-left: 0;
+          margin-top: 10px; } }
+    @media (min-width: 576px) {
+      .section-footer__nav .li__li {
+        margin-left: 60px; } }
   .section-footer__copyright_and_links {
-    width: 60%;
-    margin: 0 auto;
     font-family: 'Montserrat', sans-serif;
     display: flex;
     justify-content: space-between;
     font-size: 14px;
     line-height: 18px; }
+    @media (min-width: 992px) {
+      .section-footer__copyright_and_links {
+        width: 60%;
+        margin: 0 auto; } }
+    @media (max-width: 767px) {
+      .section-footer__copyright_and_links {
+        flex-direction: column;
+        text-align: center; } }
 
 .helper-link {
   margin: 0;
@@ -324,3 +390,10 @@ body {
     text-decoration: none; }
     .helper-link li a:hover {
       text-decoration: underline; }
+  @media (max-width: 767px) {
+    .helper-link {
+      display: inline-flex;
+      margin-top: 20px; } }
+  @media (min-width: 768px) {
+    .helper-link {
+      display: flex; } }
